<resources>
    <string name="app_name">My Application</string>
    <string name="goReg">Нет аккаунта? Зарегистрируйтесь</string>
    <string name="log_in">Войти</string>
    <string name="is_set">Верно! +1</string>
    <string name="is_not_set">Это не сет!</string>
    <string name="add_cards">+ 3 карты</string>
    <string name="pick_card">Выбрать карты</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">Пароль</string>
    <string name="login">Логин</string>
    <string name="account_attention">Войдите в аккаунт</string>
    <string name="create_room">Создать комнату</string>
    <string name="join_room">Присоединиться</string>
    <string name="code_room">Код комнаты</string>
    <string name="enter_room">Вход в игровую сессиею</string>
</resources>