<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1B1A1A"
    tools:context=".MainActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/recyclerView"
        android:layout_marginBottom="200dp"
        />

    <TextView
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="8dp"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="aboba1"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@+id/recyclerView"
        android:textSize="22sp"
        android:id="@+id/nameUser1"
        />

    <TextView
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="8dp"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="aboba2"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@+id/recyclerView"
        android:textSize="22sp"
        android:id="@+id/nameUser2"
        />
    <TextView
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="8dp"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="0"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@+id/nameUser1"
        android:textSize="32sp"
        android:id="@+id/scoreUser1"
        />

    <TextView
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="8dp"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="2"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@+id/nameUser2"
        android:textSize="32sp"
        android:id="@+id/scoreUser2"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/scoreUser1"
        android:textSize="22sp"
        android:textColor="@color/white"
        android:text="@string/is_not_set"
        android:gravity="center_horizontal"
        android:id="@+id/checkCombo"
        android:layout_marginTop="8dp"/>

    <Button
        android:layout_marginTop="15dp"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/checkCombo"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="15dp"
        android:text="@string/pick_card"
        android:id="@+id/pickCard"/>

    <Button
        android:layout_marginTop="15dp"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/checkCombo"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="17dp"
        android:id="@+id/addCards"
        android:text="@string/add_cards"
        android:layout_marginEnd="150dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>